--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
   </title>
   </head>
   <body>
-    <h1>Lsagna Recipe</h1>
+    <h1>Lasagna Recipe</h1>
     <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="Lasagna" height="300" width="300">
     <h2>Description</h2>
     <p>This Lasagna Recipe is easy to make with layers of pasta, meat sauce, and cheese.</p>
