Updated recipe pages: added 'Couscous', 'Pastila', and 'Tagine' recipes. Removed old recipes (Chocolate Cake, Lasagna, Pizza). Added styles.css for index.html and recipes-styles.css for other recipe pages.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Odin Recipes - A Collection of Simple Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
-      <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-      <li><a href="recipes/chocolate-cake.html">Chocolate Cake Recipe</a></li>
-    </ul>
+    <div class="recipes">
+      <h1>Moroccan cuisine</h1>
+      <p>Est. 2020</p>
+      <hr />
+      <h2>Recipe List</h2>
+      <ul>
+        <li>
+          <a class="recipe-link" href="recipes/couscous.html"
+            >Couscous with Seven Vegetables</a
+          >
+        </li>
+        <li>
+          <a class="recipe-link" href="recipes/pastila.html">Poultry Pastila</a>
+        </li>
+        <li>
+          <a class="recipe-link" href="recipes/tagine.html"
+            >Tagine whith meat</a
+          >
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
